<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
<item
    android:id="@+id/home"
    android:title="@string/home"
    android:icon="@drawable/ic_home"
    />

    <item
        android:id="@+id/myprofile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_profile"
        />
    <item
        android:id="@+id/favourites"
        android:title="@string/favourites"
        android:icon="@drawable/ic_fav"
        />
    <item
        android:id="@+id/orderhistory"
        android:title="@string/order_history"
        android:icon="@drawable/ic_orderhistory"
        />
    <item
        android:id="@+id/faq"
        android:title="@string/faq"
        android:icon="@drawable/ic_faq"
        />
    <item
        android:id="@+id/logout"
        android:title="Logout"
        android:icon="@drawable/ic_logout"
        />
    </group>
</menu>