<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ResetPassword"
    android:background="@drawable/foodbackground"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="351dp"
            android:layout_height="70dp"
            android:layout_marginTop="97dp"
            android:textAlignment="center"
            android:text="@string/enter_the_received_otp_below"
            android:textColor="#ad1457"
            android:textSize="25sp" />
        <EditText
            android:id="@+id/otp"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn"
            android:gravity="center"
            android:hint="@string/otp_4_digits"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColorHint="#FFFBF8" />
        <EditText
            android:id="@+id/newpassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textColorHint="#FFFBF8" />
        <EditText
            android:id="@+id/confirmpassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textColorHint="#FFFBF8" />
        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btnpink"
            android:text="Submit"
            android:textColor="#FFFBF8" />
    </LinearLayout>


</LinearLayout>